[tool.poetry]
name = "test-streamlit"
version = "0.1.0"
description = ""
authors = ["Vicrrs <enricofermi20192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
httpx = "^0.27.0"
pandas = "^2.2.1"
plotly = "^5.19.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
